--- a/scripts/cleaning/sumstats_cleaning.Rmd
+++ b/scripts/cleaning/sumstats_cleaning.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "rg results summary tables template"
-author: "Abigail ter Kuile, Christopher Huebel, Alish Palmos Johan Zrvskovec, Oliver Pain"
+title: "Cleaning script for GWAS summary statistics repository pipeline"
+author: "Abigail ter Kuile, Christopher Huebel, Alish Palmos, Johan Zrvskovec, Oliver Pain"
 date: "28/08/2021"
 output: html_document
 ---
@@ -165,20 +165,6 @@ Setting for keeping or removing indels
 The standrad should be TRUE. The light cleaning should contain the indels
 ```{r Indels}
 keep_indel <- TRUE # or change to FALSE
-```
-
-### MHC filter
-Activate/deactivate MHC filter
-+++CH: What does 37 mean here?
-```{r MHC filter}
-mhc.filter <- 37
-```
-
-### Supermunge
-Activate/deactivate supermunge
-+++CH: This needs one line explanation what supermunge does.
-```{r Supermunge setting}
-doSupermunge <- TRUE
 ```
 
 
@@ -836,32 +822,6 @@ if(
  
 }
 ```
- 
-Need to add from Helenas (below):
-Helena: /mnt/lustre/groups/ukbiobank/sumstats/scripts/computeLambdaAndCorrect.r
-+++ATK: is there anything we want to add from Helena's below?
-+++OP: I have noticed gzfile sometimes truncates the output. 
-The fwrite function now automatically gzips files if the file name ends with a 'gz'
-
-```{r genomic control Helena's script}
-#arg <- commandArgs(TRUE)
-#output <- arg[2]
-#
-#
-#gres <- read.table(arg[1],header=T,sep="\t")
-#
-#chisq <- qchisq(1-gres$P,1) #check chisq
-#
-#lambda<-median(chisq)/qchisq(0.5,1) #check lambda
-#
-#gres$P <- pnorm(-abs((qnorm(gres$P/2)/sqrt(lambda))))*2 #check p 
-#
-#gres[,"N"]<-floor(gres[,"N"])
-#
-#gz1 <- gzfile(paste(output,".gz",sep=""),"w")
-#write.table(gres,gz1,quote=F,row.names=F,col.names=T,sep="\t")
-#close(gz1)
-```
 
 # Genomic Control calculation: Lambda
 
@@ -1213,7 +1173,7 @@ if(!is.na(mhc.filter)){
         cSumstats <- cSumstats[!rm, ]
     } else if (mhc.filter==38) {
         rm <- (!is.na(cSumstats$CHR) & !is.na(cSumstats$BP) & cSumstats$CHR=="6" & cSumstats$BP>=28510120 & cSumstats$BP<=33480577)
-        cSumstats <- cSumstats[!rm, ]
+        cSumstats_nomhc <- cSumstats[!rm, ]
         cat("Removing ", sum(rm), " SNPs in the GRCh",mhc.filter," MHC; ", nrow(cSumstats), " remain")
     } else {
         cat("Warning: Invalid assembly version provided - no filtering of the MHC was done!")
@@ -1223,6 +1183,18 @@ if(!is.na(mhc.filter)){
   }
 }
 ```
+
++++ATK: i think the above chunk that removes mhc region needs to be moved to after munging takes place? And takes the munged file as input? I have put cSumstats_nomhc as a place holder for now, please change if the above chunk changes. 
+```{r save mhc munged file as .gz file in no_mhc folder}
+fwrite(cSumstats_nomhc,
+       paste0("../munged_noMHC/",
+              cCode,
+              ".gz"),
+       sep='\t',
+       na='NA',
+       quote=F)
+```
+
 
 # Munge sumstats
 ```{r}
@@ -1256,24 +1228,6 @@ python ${ldscdir}/munge_sumstats.py --out ${output_path}/${file} --merge-alleles
 ```
 
 
-# Supermunge
-```{r Supermunge}
-if(doSupermunge){
-  supermungeTraitCode<-paste0(traitCodes[1],"_supermunge")
-  supermunge(
-    list_df = list(cSumstats),
-    refFilePath = "/scratch/groups/ukbiobank/Edinburgh_Data/Software/ldscore/w_hm3.snplist",
-    traitNames = paste0(traitCodes[1],"_supermunge"),
-    pathDirOutput = "/scratch/groups/ukbiobank/sumstats/munged/",
-    N = cN,
-    keepIndel = keepIndel
-      )
-  
-  Sys.setenv(supermunge_trait_code=supermungeTraitCode)
-}
-```
-
-
 # LD score
 ```{bash}
 #!/bin/bash
@@ -1292,28 +1246,6 @@ ldscdir="/scratch/groups/ukbiobank/KCL_Data/Software/ldsc/"
 
 #run ldsc 
 python ${ldscdir}/ldsc.py --h2 ${output_path}/${file}.gz --ref-ld-chr ${ldscdir}/eur_w_ld_chr/ --w-ld-chr ${ldscdir}/eur_w_ld_chr/ --out ${output_path}/${file}_herit
-
-```
-
-# LD score 2
-```{bash}
-#!/bin/bash
-#SBATCH -n 8
-#SBATCH --mem-per-cpu=9G
-#SBATCH -t 72:00:00
-if [[ -v supermunge_trait_code ]]; then
-###
-module add devtools/anaconda/2019.3-python2.7.16
-
-#parameters
-input_path="/scratch/groups/ukbiobank/sumstats/cleaned/"
-output_path="/scratch/groups/ukbiobank/sumstats/munged/"
-ldscdir="/scratch/groups/ukbiobank/KCL_Data/Software/ldsc/"
-
-#run ldsc 
-python ${ldscdir}/ldsc.py --h2 ${output_path}/${supermunge_trait_code}.gz --ref-ld-chr ${ldscdir}/eur_w_ld_chr/ --w-ld-chr ${ldscdir}/eur_w_ld_chr/ --out ${output_path}/${supermunge_trait_code}_herit
-
-fi
 
 ```
 
