--- a/scripts/cleaning/sumstats_cleaning.Rmd
+++ b/scripts/cleaning/sumstats_cleaning.Rmd
@@ -23,11 +23,11 @@ remove(list = ls())
 Package setup
 ```{r Packages}
 #devtools::install_github("johanzvrskovec/shru")
+# library(shru)
+# library(googlesheets4)
 
 library(optparse)
 library(data.table)
-library(shru)
-library(googlesheets4)
 library(tidyverse)
 ```
 
@@ -59,12 +59,45 @@ column_parser <- add_option(
 
 column_parser <- add_option(
   object = column_parser,
+  opt_str = c("-l", "--label"),
+  type = "character",
+  help = "Label describing GWAS phenotype/sample"
+  )
+
+column_parser <- add_option(
+  object = column_parser,
   opt_str = c("-n", "--sample-size"),
   type = "numeric",
   help = "Number of individuals in the sample."
   )
 
+column_parser <- add_option(
+  object = column_parser,
+  opt_str = c("-p", "--population"),
+  type = "character",
+  help = "GWAS sample super population."
+  )
+
+column_parser <- add_option(
+  object = column_parser,
+  opt_str = c("-o", "--output"),
+  type = "character",
+  help = "Path to gwas_sumstats group folder."
+  )
+
 column_options <- parse_args(column_parser)
+
+# For testing
+#/scratch/groups/gwas_sumstats/original/alcdep_afr_all.jul2017.min_n.gz
+#/scratch/groups/gwas_sumstats/original/daner_PGC_BIP32b_mds7a.gz
+
+column_options$file<-'/scratch/groups/gwas_sumstats/original/daner_PGC_BIP32b_mds7a.gz'
+column_options$label<-'Test run'
+column_options$code<-'TEST_XXXX'
+column_options$`sample-size`<-'100000'
+column_options$population<-'EUR'
+column_options$output<-'/scratch/groups/gwas_sumstats'
+
 ```
 
 Retrieve the recent date
@@ -74,53 +107,13 @@ date = Sys.Date()
 date
 ```
 
-
-## Source credentials files
-This file includes the file path to the King's College London Microsoft Teams channel to store the raw data files of the GWAS summary statistics (intermediate solution before we move the final version to the rosalind cluster). However, we probably will save all summary statistics raw files on SharePoint/Teams to save space on rosalind.
-
-sumstats_path
-
-The file also contains the login details for your google work account: google_account_details
-
-```{r Credentials file}
-source(file = "../credentials/credentials.R")
-```
-
-
-## GWAS summary statistics overview sheet
-
-Login to googlesheets
-```{r Login to google sheets}
-gs4_auth(email = google_account_details)
-```
-
-+++JZ: We need to discuss which data to use here - the existing (outdated?) content of the Google spreadsheet or the content of the database extract which we have in a file. Update the spreadsheet to the content fo the file?
-Import google spreadsheet that contains the information of the GWAS
-```{r Google spreadsheet of GWAS dictionary}
-gwas_sheet <- read_sheet(
-  ss = "https://docs.google.com/spreadsheets/d/1Wmj4Qzumkzks6541vQJqxaUBxjfL4KLQo7_K_oquacI/edit#gid=0",
-  sheet = "SGDP_GWASLIST_EDITTHIS",
-  col_names = TRUE,
-  trim_ws = TRUE, # Trims whitespace,
-  guess_max = 600,
-  na = c("", "NULL", "NA")
-  )
-
-colnames(gwas_sheet)
-
-gwas_sheet
-```
-
 ## Script settings
 
 ### Paths
 A list of file paths you want to be processed in parallel. In the function this will be a list, but for the command line utility we have to parse the argument, maybe have paths separated by comma or similar?
 _Set your file path_, when testing
 ```{r Paths}
-filePaths <- c(
-  paste0(sumstats_path, "/data_raw/sum_stats_raw/CUD_EUR_full_public_11.14.2020.gz")
-  )
-# filePaths <- column_options$file
+filePaths <- column_options$file
 filePaths
 ```
 
@@ -128,8 +121,7 @@ filePaths
 A list of nice trait names which could be fit for a publication table/graph/plot
 _Set your nice trait name_, when testing
 ```{r Trait names}
-traitNames <- c("Cannabis use disorder (2020)")
-#traitNames <- column_options$names
+traitNames <- column_options$label
 traitNames
 ```
 
@@ -138,8 +130,7 @@ A list of codes you want to identify your traits by (different from the nice nam
 These codes consist of 4 letters; for examples investigate the GWAS spreadsheet. Try to identify similar traits.
 _Set your trait code string_, when testing
 ```{r Code}
-traitCodes <- c("CUDI01")
-#traitCodes <- column_options$code
+traitCodes <- column_options$code
 traitCodes
 ```
 
@@ -185,7 +176,7 @@ plink chromosome numbering: https://zzz.bwh.harvard.edu/plink/data.shtml
 
 This chunk reads in the functions "parse_SNP_column_as_rs_number" and "parse_CHR_column" which parses the SNP and CHR columns respectively. It means that it can read different formats of data in those and convert it to rs-id and chromosome number which we expect/save to be in the SNP and CHR columns.
 ```{r Chromosome numbering}
-source(file = "../functions/column_parsing_functions.R")
+source(file = "../functions/parse_SNP_column_as_rs_number.R")
 ```
 
 
@@ -193,24 +184,25 @@ source(file = "../functions/column_parsing_functions.R")
 We use the data.table package, because it is much faster than the basic R functions to read in data.
 https://cran.r-project.org/web/packages/data.table/vignettes/datatable-intro.html
 
-Defaults to use commas as field separators (as per fread default) if commas are more credible, as in Helena's script.
+The fread function automatically detects the field seperator and handles a range of commonly use seperators. fread fill parameter is set to F to avoid unexpected truncations leading to column mispecification. 
 
 ```{r Read in sumstats}
 cCode <- traitCodes[1]
 
-cFilePath <- filePaths[1] # +++CH: we will probably want to have a loop over the provided files??
+cFilePath <- filePaths[1]
 
 cSumstats <- data.table::fread(
   file = cFilePath,
   header = T,
   quote = "\"",
-  fill = T, # If TRUE then in case the rows have unequal length, blank fields are implicitly filled.
   na.strings = c(
     ".",
     NA,
     "NA",
     ""
-    )
+    ),
+  # For testing read in first 10k rows
+  nrows=10000
   )
 
 # Number of rows before touching the data
@@ -298,16 +290,20 @@ setkeyv(
   )
 ```
 
-
 Interpret BGENIE SNP format
+
+```{r Interpret BGENIE SNP format}
+
+# Future development
+
+```
 
 Check if daner like columns present
 ref: https://docs.google.com/document/d/1TWIhr8-qpCXB13WCXcU1_HDio8lC_MeWoAg2jlggrtU/edit
 ```{r Interpret daner like format}
-if(
-  !any(colnames(cSumstats)=="FRQ") 
-  & !any(colnames(cSumstats)=="N_CAS") 
-  & !any(colnames(cSumstats)=="N_CON"))
+if(!any(colnames(cSumstats)=="FRQ") & 
+   !any(colnames(cSumstats)=="N_CAS") & 
+   !any(colnames(cSumstats)=="N_CON"))
   {
   danerNcas <- colnames(cSumstats)[
     startsWith(colnames(cSumstats),
@@ -325,22 +321,24 @@ if(
     {
     
     # Add number of cases and number of controls
-    cSumstats$N_CAS <- danerNcas
-    cSumstats$N_CON <- danerNcon
+    cSumstats$N_CAS <- as.numeric(gsub('FRQ_A_','',danerNcas))
+    cSumstats$N_CON <- as.numeric(gsub('FRQ_U_','',danerNcon))
     
     # Add case and control specific effect allele frequencies
-    colnames(cSumstats)[danerNcas] <- "FRQ_CASES"
-    colnames(cSumstats)[danerNcon] <- "FRQ_CONTROLS"
+    colnames(cSumstats)[colnames(cSumstats) == danerNcas] <- "FRQ_CASES"
+    colnames(cSumstats)[colnames(cSumstats) == danerNcon] <- "FRQ_CONTROLS"
+    
+    # Add total FRQ column
+    cSumstats$FRQ<-((cSumstats$FRQ_CASES * cSumstats$N_CAS) + (cSumstats$FRQ_CONTROLS * cSumstats$N_CON))/(cSumstats$N_CAS + cSumstats$N_CON)
     
     colnames(cSumstats)
   }
   }
 ```
 
-
-+++JZ: Do we want to convert CHR to numeric values?
-+++OP: No strong opinion on this. Are there standard numeric values for non-autosomes and what does commonly used software use? If not then I would suggest leaving as a character vector.
 ```{r Convert to numeric columns}
+
+cSumstats$CHR<-as.numeric(cSumstats$CHR)
 
 ```
 
@@ -614,13 +612,15 @@ if(
   any(colnames(cSumstats)=="FRQ")
   ){
   
+  frq.filter<-0.005
+  
   # If outside of bounds 
   rm <- (!is.na(cSumstats$FRQ) 
-         & (cSumstats$FRQ<0.005 | cSumstats$FRQ>0.995))
+         & (cSumstats$FRQ<frq.filter | cSumstats$FRQ>(1-frq.filter)))
   
   cSumstats <- cSumstats[!rm, ]
   
-  cat("Removing", sum(rm), "SNPs with FRQ <", frq.filter, ";", nrow(cSumstats), "remain")
+  cat("Removing", sum(rm), "SNPs with MAF <", frq.filter, ";", nrow(cSumstats), "remain")
   
   sumstats_meta[cCode,c("n_removed_frq")] <- sum(rm)
   
@@ -681,7 +681,7 @@ if(
 We are removing SNPs with Ns that are ± 3 SD from the median sample size. We use a 3SD from the median threshold as this is the threshold used by SBayesR in GCTB, an analysis that is sensitive to sample size variance across variants (https://cnsgenomics.com/software/gctb/#Tutorial). We will filter variants by their effective sample size, which is simply N for contiuous phenotypes, but 4/(1/Ncases+1/Nctrls) for binary phenotypes. Sometime the effective sample size is reported in the summary statistics, or it can be estimated using N_CASE and N_CON values (note. this approach may be inaccurate for GWAS meta-analysis results as the proportion of cases and controls will likely vary across each cohort).
 
 ```{r N filter}
-if(any(names(sumstats) == 'NEF')){
+if(any(names(cSumstats) == 'NEF')){
   # NEF is present in sumstats so variants will be filtered by provided NEF
   N_sd <- sd(cSumstats$NEF)
   N_median <- median(cSumstats$NEF)
@@ -692,7 +692,7 @@ if(any(names(sumstats) == 'NEF')){
   sumstats_meta[cCode,c("n_outlier_n")] <- sum(cSumstats$N_outlier, na.rm=T)
 
 } else {
-  if(any(names(sumstats) == 'N_CAS') & any(names(sumstats) == 'N_CON')){
+  if(any(names(cSumstats) == 'N_CAS') & any(names(cSumstats) == 'N_CON')){
     # NEF isn't present, but N_CAS and N_CON are present, so we will calculate NEF from N_CAS and N_CON.
     cSumstats$NEF_est<-4/(1/cSumstats$N_CAS+1/cSumstats$N_CON)
     
@@ -846,13 +846,9 @@ if(
     any(colnames(cSumstats) == "BETA") == 1
     )
     {
-    
-    cSumstats$Z <- cSumstats$BETA/cSumstats$SE ## change to Z_check?
-    
+
     cSumstats$P_check <- 2*pnorm(-abs(cSumstats$Z))
     
-    cSumstats$Z <- NULL
-
     if(
       abs(mean(cSumstats$P[!is.na(cSumstats$P_check)]) - mean(cSumstats$P_check[!is.na(cSumstats$P_check)])) > 0.01)
       {
@@ -927,8 +923,7 @@ cSumstats$IUPAC<-snp_iupac(cSumstats$A1, cSumstats$A2)
 
 ```{r define super population of GWAS sample}
 # Define super population
-super_pop<-'EUR' # Should be specified by user
-# super_pop <- clOptions$population
+super_pop <- column_options$population
 
 ```
 
@@ -949,13 +944,13 @@ if(chr_bp_avail){
   ###
   # Determine build
   ###
-  # Read in chromosome 22 of reference data
-  i<-22
+  # Read in random chromosome of reference data present in GWAS
+  i<-unique(cSumstats$CHR)[1]
   
   ref<-readRDS(file = paste0('/scratch/groups/gwas_sumstats/1kg_ref/1kg_ref_chr',i,'.rds'))
   
   # Check target-ref condordance of BP across builds
-  ref$CHR<-as.character(ref$CHR)
+  ref$CHR<-as.numeric(ref$CHR)
   matched<-list()
   matched[['GRCh37']]<-merge(cSumstats, ref, by.x=c('CHR','ORIGBP','IUPAC'), by.y=c('CHR','BP_GRCh37','IUPAC'))
   matched[['GRCh38']]<-merge(cSumstats, ref, by.x=c('CHR','ORIGBP','IUPAC'), by.y=c('CHR','BP_GRCh38','IUPAC'))
@@ -1159,11 +1154,11 @@ if(chr_bp_avail){
 
 ```{r allele Frequency columns}
 # Check FRQ column is valid
-if('FRQ' %in% names(cSumstats)){
-  if(any(cSumstats$FRQ>1) || any(cSumstats$FRQ<0)) {
+if('FRQ' %in% names(cSumstats_harm)){
+  if(any(cSumstats_harm$FRQ>1) || any(cSumstats_harm$FRQ<0)) {
     
     stop(
-        paste0('\nThere are FRQ values larger than 1 (',sum(cSumstats$FRQ>1),') or less than 0 (',sum(cSumstats$FRQ<0),') which is outside of the possible FRQ range.')
+        paste0('\nThere are FRQ values larger than 1 (',sum(cSumstats_harm$FRQ>1),') or less than 0 (',sum(cSumstats_harm$FRQ<0),') which is outside of the possible FRQ range.')
     )
   }
 }
@@ -1174,138 +1169,29 @@ if('FRQ' %in% names(cSumstats)){
 
 ```{r allele Frequency columns}
 # Check FRQ column is valid
-if('FRQ' %in% names(cSumstats) & !is.na(super_pop)){
-  cSumstats$diff<-abs(cSumstats$FREQ-cSumstats$REF.FRQ)
-  cSumstats$FRQ_bad<-F
-  cSumstats$FRQ_bad[is.na(cSumstats$diff) | cSumstats$diff > 0.2]<-T
-  cSumstats$diff<-NULL
+if('FRQ' %in% names(cSumstats_harm) & !is.na(super_pop)){
+  cSumstats_harm$diff<-abs(cSumstats_harm$FRQ-cSumstats_harm$REF.FRQ)
+  cSumstats_harm$FRQ_bad<-F
+  cSumstats_harm$FRQ_bad[is.na(cSumstats_harm$diff) | cSumstats_harm$diff > 0.2]<-T
+  cSumstats_harm$diff<-NULL
 }
 
 ```
 
 # Save cleaned file and log output
-+++JZ: When converted to a function we would want to provide this as an argument (with the possibility of a default value).
+
 ```{r save cleaned file as .gz file in cleaned folder}
-#cSumstats %>%
-#  gzfile(
-#    file = paste0("../cleaned/", cCode, ".gz", sep="\t")
-#    )
 
-# Changed to fwrite for compression as have had experience where gzfile truncates the output.
-fwrite(cSumstats, paste0("../cleaned/", cCode, ".gz"), sep='\t', na='NA', quote=F)
+fwrite(cSumstats_harm, paste0(column_options$output,"/cleaned/", cCode, ".gz"), sep='\t', na='NA', quote=F)
 
 ```
 
-# Update overview spreadsheet
-+++JZ: TODO
-```{r update overview metadata spreadsheet}
-
-
-
-```
-
-
-+++CH: Additionally, a log file should be created and be saved in the log file folder
 ```{r create log file and save in log file folder}
 sumstats_meta %>%
   write_tsv(
-    file = paste0("../cleaned/log/", cCode, "_log.txt"),
+    path = paste0(column_options$output,"/cleaned_logs/", cCode, "_log.txt"),
     col_names = TRUE
     )
-```
-
-
-
-
-## MHC removal (separate from cleaning script)
-This should happen after the LDSC munging; some people will want to use the MHC variants for their analyses
-
-remove MHC region based on position - probably better to do after merge/harmonisation with reference
-references:
-https://www.ncbi.nlm.nih.gov/grc/human/regions/MHC?asm=GRCh37
-https://www.ncbi.nlm.nih.gov/grc/human/regions/MHC
-```{r MHC removal}
-if(!is.na(mhc.filter)){
-  if(any(colnames(cSumstats)=="CHR") & any(colnames(cSumstats)=="BP")){
-    if(mhc.filter==37) {
-        rm <- (!is.na(cSumstats$CHR) & !is.na(cSumstats$BP) & cSumstats$CHR=="6" & cSumstats$BP>=28477797 & cSumstats$BP<=33448354)
-        cSumstats <- cSumstats[!rm, ]
-    } else if (mhc.filter==38) {
-        rm <- (!is.na(cSumstats$CHR) & !is.na(cSumstats$BP) & cSumstats$CHR=="6" & cSumstats$BP>=28510120 & cSumstats$BP<=33480577)
-        cSumstats_nomhc <- cSumstats[!rm, ]
-        cat("Removing ", sum(rm), " SNPs in the GRCh",mhc.filter," MHC; ", nrow(cSumstats), " remain")
-    } else {
-        cat("Warning: Invalid assembly version provided - no filtering of the MHC was done!")
-      }
-  } else {
-    cat("Warning: No chromosome or base-pair position information available - no filtering of the MHC was done!")
-  }
-}
-```
-
-+++ATK: i think the above chunk that removes mhc region needs to be moved to after munging takes place? And takes the munged file as input? I have put cSumstats_nomhc as a place holder for now, please change if the above chunk changes. 
-```{r save mhc munged file as .gz file in no_mhc folder}
-fwrite(cSumstats_nomhc,
-       paste0("../munged_noMHC/",
-              cCode,
-              ".gz"),
-       sep='\t',
-       na='NA',
-       quote=F)
-```
-
-
-# Munge sumstats
-```{r}
-
-#Write the trait code into a text file 
-c(traitCodes) %>% write_lines( "GWAS_name.txt")
-
-```
-
-```{bash}
-#!/bin/bash
-#SBATCH -n 8
-#SBATCH --mem-per-cpu=9G
-#SBATCH -t 72:00:00
-
-###
-module add devtools/anaconda/2019.3-python2.7.16
-
-#parameters
-input_path="/scratch/groups/ukbiobank/sumstats/cleaned/"
-file=`cat GWAS_name.txt`
-output_path="/scratch/groups/ukbiobank/sumstats/munged/"
-ldscdir="/scratch/groups/ukbiobank/Edinburgh_Data/Software/ldscore/"
-#optional parameters to compute h2 liability scale
-#Nca=$3
-#Nco=$4
-
-#####munge with w_hm3
-python ${ldscdir}/munge_sumstats.py --out ${output_path}/${file} --merge-alleles ${ldscdir}/w_hm3.snplist --N-cas-col Ncas --N-con-col Ncon --N-col N --sumstats /scratch/groups/ukbiobank/sumstats/cleaned/${input_path}/${file}.gz --info-min 0.6
-
-```
-
-
-# LD score
-```{bash}
-#!/bin/bash
-#SBATCH -n 8
-#SBATCH --mem-per-cpu=9G
-#SBATCH -t 72:00:00
-
-###
-module add devtools/anaconda/2019.3-python2.7.16
-
-#parameters
-input_path="/scratch/groups/ukbiobank/sumstats/cleaned/"
-file=`cat GWAS_name.txt`
-output_path="/scratch/groups/ukbiobank/sumstats/munged/"
-ldscdir="/scratch/groups/ukbiobank/KCL_Data/Software/ldsc/"
-
-#run ldsc 
-python ${ldscdir}/ldsc.py --h2 ${output_path}/${file}.gz --ref-ld-chr ${ldscdir}/eur_w_ld_chr/ --w-ld-chr ${ldscdir}/eur_w_ld_chr/ --out ${output_path}/${file}_herit
-
 ```
 
 
