--- a/scripts/cleaning/sumstats_cleaning.Rmd
+++ b/scripts/cleaning/sumstats_cleaning.Rmd
@@ -105,14 +105,22 @@ column_options$sex<-'both'
 #column_options$output<-'/scratch/groups/gwas_sumstats'
 column_options$output<-"~/project/JZ_GED_PHD_ADMIN_GENERAL/data/gwas_sumstats/cleaned_shpipeline"
 
-# #JZ
-# column_options$file<-'/Users/jakz/Documents/local_db/JZ_GED_PHD_ADMIN_GENERAL/data/gwas_sumstats/raw/sumstats_neuroticism_ctg_format.txt.gz'
-# column_options$label<-"Neuroticism" #This is the nice trait name
-# column_options$code<-'NEUR02'
-# column_options$`sample-size`<-449484
+# column_options$file<-'/scratch/groups/gwas_sumstats/original/glad_coping/regenie_GWASv2_mh_affected_MDQ_items_allchr_mdq.sum_score.12.txt.gz'
+# column_options$label<-'Test run'
+# column_options$code<-'TEST_XXXX'
+# column_options$`sample-size`<-'100000'
+# column_options$population<-'EUR'
+# column_options$output<-'/scratch/groups/gwas_sumstats'
+
+
+# #JZ settings for PGC3 MDD GWAS
+# column_options$file<-'/Users/jakz/Documents/local_db/JZ_GED_PHD_ADMIN_GENERAL/data/gwas_sumstats/raw/daner_pgc_mdd_full_eur_hg19_v3.49.24.11.rp.gz'
+# column_options$label<-"Major depressive disorder" #This is the nice trait name
+# column_options$code<-'MDD_PGC3'
+# column_options$`sample-size`<-NA
 # column_options$population<-'EUR'
 # column_options$output<-'/Users/jakz/Documents/local_db/JZ_GED_PHD_ADMIN_GENERAL/data/gwas_sumstats/cleaned_shpipeline'
-# column_options$reference_doi="https://doi.org/10.1038/s41588-018-0151-7"
+# column_options$reference_doi=NA
 
 
 ```
@@ -351,6 +359,7 @@ setkeyv(
 
 Check if daner like columns present
 ref: https://docs.google.com/document/d/1TWIhr8-qpCXB13WCXcU1_HDio8lC_MeWoAg2jlggrtU/edit
++++JZ: Needs to be fixed? Ratio ca/co should not be stored in FRQ as this may be used for effect allele frequency. I encountered a file where ncas and ncon were provided per variant.
 ```{r Interpret daner like format}
 if(!any(colnames(cSumstats)=="FRQ") & 
    !any(colnames(cSumstats)=="N_CAS") & 
